# sns_cinema_sidelights

./: .gitignore  BASELINE_SIGNOFF.md  CMakeLists.txt  DEPLOYMENT.md  DEVELOPMENT.md  FOR_PROJECTIONISTS.md  OPERATIONS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  USER_SETUP.md  check_buttons.py  test.py  test_runner.py
config/systemd/: sns-sidelights.service
sessions/: 001-test-runner-and-pwm-characterisation.md  002-ssh-hardening-and-wifi.md  003-deploy-regression.md  004-hardware-isolation.md  005-event-engine-isolation.md  TEMPLATE.md
simulator/: README.md  engine.py  preview.py  record_sequences.py  sequences.py  upload_casts.py
simulator/recordings/: ambient.cast  basswub.cast  blocktower.cast  breathing.cast  breathing478.cast  columnsrows.cast  countdown.cast  dimon.cast  drift.cast  ember.cast  fadeout.cast  heartbeat.cast  knightrider.cast  projector.cast  rave.cast  slowglow.cast  snake.cast  sparkle.cast  sunrise.cast
src/: CDigitalButton.cpp  CDigitalButton.h  CLEDManager.cpp  CLEDManager.h  CMakeLists.txt  CSequenceManager.cpp  CSequenceManager.h  main.cpp  main.h
src/events/: CBrightnessSetEvent.cpp  CBrightnessSetEvent.h  CEvent.cpp  CEvent.h  CFadeEvent.cpp  CFadeEvent.h  CMakeLists.txt  CPulseEvent.cpp  CPulseEvent.h
src/sequences/: CMakeLists.txt  CSequence.cpp  CSequence.h  CSequenceAmbient.cpp  CSequenceAmbient.h  CSequenceAmbientHigh.cpp  CSequenceAmbientHigh.h  CSequenceBreathing478.cpp  CSequenceBreathing478.h  CSequenceEmber.cpp  CSequenceEmber.h  CSequenceFadeInSparkle.cpp  CSequenceFadeInSparkle.h  CSequenceFadeOutSimple.cpp  (+9 more)
